--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
         <div class="empresa">
-            <img src="./images/logo.png" />
+            <img src="/images/logo.png" />
             <text style="color:black">OptimusTech</text>
         </div>
         <div class="botoes">
@@ -71,7 +71,7 @@
             <article id="anuncioart">
                 <h2 style="font-size: 40px; margin-bottom: 0">Estamos procurando por talentos</h2>
                 <p style="font-size: 20px; color:grey;">Somos uma equipe 100% remota com pessoas do país inteiro.</p>
-                <img src="./images/equipe.png" />
+                <img src="/images/equipe.png" />
             </article>
 
             <div id="design">
@@ -124,7 +124,7 @@
         <div class="avaliacao">
             <p>Veja o que nossos colabores dizem sobre nós</p>
             <h6>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h6><br>
-            <img src="./images/avatar.png" /><br>
+            <img src="/images/avatar.png" /><br>
             <text id="name">Julia Castro</text>
             <text>Desenvolvedora Web</text>
         </div>
