--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <article id="anuncioart">
                 <h2 style="font-size: 40px; margin-bottom: 0">Estamos procurando por talentos</h2>
                 <p style="font-size: 20px; color:grey;">Somos uma equipe 100% remota com pessoas do país inteiro.</p>
-                <img src="/images/equipe.png" />
+                <img src="images/equipe.png" />
             </article>
 
             <div id="design">
